nim/http-gw-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: f5-gateway-class
spec:
  controllerName: "f5.com/default-f5-cne-controller"
  description: "F5 BIG-IP Kubernetes Gateway"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-httproute-gateway
  namespace: nim
spec:
  addresses:
  - type: "IPAddress"
    value: 10.10.40.100
  gatewayClassName: f5-gateway-class
  listeners:
  - name: nim
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app
  namespace: nim
spec:
  parentRefs:
  - name: my-httproute-gateway
    sectionName: nim
  hostnames:
    - "nim.mwlabs.net"
  rules:
  - backendRefs:
    - name: my-nim-nim-llm
      namespace: nim
      port: 8000
